[Tests]: First test rewrites to use gametest, needs further rewrites to actually test things in a world like the CompressionInventoryPartTests